force-app/main/default/objects/Customer_Bill__c/Customer_Bill__c.object-meta.xml
<CustomObject>
    <label>Bill</label>
    <nameField>
        <displayFormat>Bill-{00000}</displayFormat>
        <label>Bill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>