force-app/main/default/objects/Customer_Bill__c/fields/Amount_to_be_paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_be_paid__c</fullName>
    <description>amount to be paid value is calculated from Opportunity amount based on 10%, 40%, 50%</description>
    <label>Amount to be paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>