force-app/main/default/objects/Customer_Bill__c/fields/Bill_Status__c.field-meta.xml
<CustomField>
    <fullName>Bill_Status__c</fullName>
    <label>Bill Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10% Payment Received</fullName>
            </value>
            <value>
                <fullName>10% Payment Approved</fullName>
            </value>
            <value>
                <fullName>10% Payment Rejected</fullName>
            </value>
            <value>
                <fullName>40% Payment Received</fullName>
            </value>
            <value>
                <fullName>40% Payment Approved</fullName>
            </value>
            <value>
                <fullName>40% Payment Rejected</fullName>
            </value>
            <value>
                <fullName>50% Payment Received</fullName>
            </value>
            <value>
                <fullName>50% Payment Approved</fullName>
            </value>
            <value>
                <fullName>50% Payment Rejected</fullName>
            </value>
            <value>
                <fullName>Full and Final Settlement Received</fullName>
            </value>
            <value>
                <fullName>Full and Final Settlement Approved</fullName>
            </value>
            <value>
                <fullName>Full and Final Settlement Rejected</fullName>
            </value>
            <value>
                <fullName>10% Intermediate</fullName>
            </value>
            <value>
                <fullName>10% Approved</fullName>
            </value>
            <value>
                <fullName>40% Intermediate</fullName>
            </value>
            <value>
                <fullName>40% Approved</fullName>
            </value>
            <value>
                <fullName>50% Intermediate</fullName>
            </value>
            <value>
                <fullName>50% Approved</fullName>
            </value>
            <value>
                <fullName>100% Intermediate</fullName>
            </value>
            <value>
                <fullName>100% Approved</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>