force-app/main/default/objects/Customer_Bill__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Any Additional Comments for the end user to enter</description>
    <label>Comments(If Any)</label>
    <type>TextArea</type>
</CustomField>