force-app/main/default/objects/Customer_Bill__c/fields/Design_Partner__c.field-meta.xml
<CustomField>
    <fullName>Design_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bills</relationshipName>
    <type>Lookup</type>
</CustomField>