force-app/main/default/objects/Customer_Bill__c/fields/Migrated_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Amount_Received__c</fullName>
    <label>Migrated Amount Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>