force-app/main/default/objects/Customer_Bill__c/fields/Minimum_Agreeable_Amount_To_be_Paid__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Agreeable_Amount_To_be_Paid__c</fullName>
    <formula>Amount_to_be_paid__c  *  Minimum_Agreeable_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Agreeable Amount To be Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>