force-app/main/default/objects/Customer_Bill__c/fields/Minimum_Agreeable_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Agreeable_Percentage__c</fullName>
    <defaultValue>(75 * 1) / 100</defaultValue>
    <description>Will be defined by HL</description>
    <label>Minimum Agreeable Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>