force-app/main/default/objects/Customer_Bill__c/fields/Payment_Approved_By_Finance__c.field-meta.xml
<CustomField>
    <fullName>Payment_Approved_By_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Approved By Finance</label>
    <type>Checkbox</type>
</CustomField>