force-app/main/default/objects/Customer_Bill__c/fields/Payment_ID_del__c.field-meta.xml
<CustomField>
    <fullName>Payment_ID_del__c</fullName>
    <label>Payment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>