force-app/main/default/objects/Customer_Bill__c/fields/Quote_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_Project_ID__c</fullName>
    <label>Quote Project ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>