force-app/main/default/objects/Customer_Bill__c/fields/Quote_Value__c.field-meta.xml
<CustomField>
    <fullName>Quote_Value__c</fullName>
    <label>Quote Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>