force-app/main/default/objects/Customer_Bill__c/fields/Quote_Version_No__c.field-meta.xml
<CustomField>
    <fullName>Quote_Version_No__c</fullName>
    <label>Quote Version No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>