force-app/main/default/objects/Customer_Bill__c/fields/Total_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Received__c</fullName>
    <description>This field is created in view to Store the summation of all Payments made for this Bill Record</description>
    <label>Total Amount Received</label>
    <summarizedField>Payment_Milestone__c.Amount_Received__c</summarizedField>
    <summaryFilterItems>
        <field>Payment_Milestone__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>Payment Approved, Payment Received</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Milestone__c.Bill__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>