force-app/main/default/objects/Customer_Bill__c/fields/Total_Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Balance_Amount__c</fullName>
    <formula>Amount_to_be_paid__c - Total_Amount_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Balance Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>