force-app/main/default/objects/Customer_Bill__c/fields/X40_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>X40_Payment_Date__c</fullName>
    <label>40% Payment Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>