force-app/main/default/objects/Customer_Bill__c/recordTypes/Bill_Approved_Record_type.recordType-meta.xml
<RecordType>
    <fullName>Bill_Approved_Record_type</fullName>
    <active>true</active>
    <label>Bill Approved Record type</label>
</RecordType>