force-app/main/default/objects/Customer_Bill__c/recordTypes/Bill_Record_type.recordType-meta.xml
<RecordType>
    <fullName>Bill_Record_type</fullName>
    <active>true</active>
    <description>This Record Type is Used when 10, 40,50 % Bills are made.</description>
    <label>Bill Record type</label>
</RecordType>