force-app/main/default/objects/Customer_Bill__c/recordTypes/Full_Final_settlement_Layout.recordType-meta.xml
<RecordType>
    <fullName>Full_Final_settlement_Layout</fullName>
    <active>true</active>
    <description>Full &amp; Final settlement Layout</description>
    <label>Full &amp; Final settlement Layout</label>
</RecordType>