force-app/main/default/objects/Customer_Bill__c/validationRules/Minimum_Agreeable_Percentage_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Agreeable_Percentage_Required</fullName>
    <active>false</active>
    <description>Minimum Agreeable Percentage Required when Amount Received is NOT NULL</description>
    <errorConditionFormula>AND( NOT( ISBLANK( Total_Amount_Received__c ) ), 
ISBLANK( Minimum_Agreeable_Percentage__c ) )</errorConditionFormula>
    <errorMessage>Minimum Agreeable Percentage Required when Amount Received</errorMessage>
</ValidationRule>